2014-XX-YY Moreno Marzolla <moreno.marzolla@unibo.it>

	* Version 1.2.3 released
	* qsmm1 now accepts lambda=0
	* qnom accepts classes with zero arrival rate
	* erlangb added
	* erlangc added

2013-06-29 Moreno Marzolla <moreno.marzolla@unibo.it>

	* Version 1.2.2 released
	* Fixed bug in qncmmva: utilization for M/M/m centers was not
	  correctly scaled to [0,1] when m>1
	* Added warning to qncsmva and qncmmva to detect numerical instability

2013-02-05 Moreno Marzolla

	* Version 1.2.1 released
	* Deprecated function qnvisits (stil available for backward
  	  compatibility)
 	* New functions qncsvisits, qnosvisits, qncmvisits and qnomvisits
	  replace qnvisits
	* Added common input checking routines for functions dealing with
	  queueing network models

2012-11-05 Moreno Marzolla

	* Version 1.2.0 released
	* Restructured the documentation
	* Reduced space requirement for qncsmva()
	* New function naming scheme; old function names are still
  	  available for compatibility with existing scripts, but will be
	  removed in the future.
	* New functions qncmaba, qncmbsb, qncmcb, qnomaba for computing
	  performance bounds on multiclass networks
	* New function qnom for analyzing open multiclass networks
	* Fixed bugs in qncsconv, qncsconvld, qncmmva, qnopensingle, qnmix
	  and qncscmva

2012-09-08 Moreno Marzolla

	* Version 1.1.1 released
	* Increased tolerance in tests for dtmc_fpt and dtmc_mtta
	* Disabled autoloading of this package on Octave startup

2012-04-05 Moreno Marzolla

	* Version 1.1.0 released
	* Fixed bug in qnvisits() which made the function behave incorrectly
	  under particular degenerate cases.
	* Fixed bug in ctmc_exps() (wrong initial value in call to lsode)
	* ctmc_exps() can now also compute the expected sojourn time
	  until absorption for absorbing CTMCs.
	* ctmc_exps() and ctmc_taexps() accept a scalar as second
	  argument; the old syntax is still supported, but may be deprecated
	  in future releases.