@@ -5,6 +5,7 @@
 	* qnom accepts classes with zero arrival rate
 	* erlangb added
 	* erlangc added
+	* engset added
 
 2013-06-29 Moreno Marzolla <moreno.marzolla@unibo.it>
 
